# autobi-powerbi-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
scripts/: grant_consent.ps1
src/powerbi_mcp/: __init__.py  __main__.py  server.py
src/powerbi_mcp/config/: auth.py  settings.py
src/powerbi_mcp/models/: workspace.py
src/powerbi_mcp/services/: fabric_api.py
src/powerbi_mcp/tools/: deployment.py  validation.py  workspace.py
tests/: conftest.py
